# BTG-ConnectAI

./: .env.example  .gitignore  README.md  aws_check.txt  checkov_out.txt  deploy.sh  pyproject.toml  pytest_out.txt
.github/workflows/: .gitkeep  cfn-deploy.yml
.kiro/hooks/: cfn-lint-on-save.kiro.hook  security-review-write.kiro.hook  sonarqube-analysis.kiro.hook  tests-after-task.kiro.hook
.kiro/settings/: mcp.json
.kiro/skills/: cfn-validate.md  deploy-sandbox.md  run-tests.md
.kiro/specs/btg-connect-ai/: design.md  requirements.md  tasks.md
.kiro/specs/btg-connect-ai-mvp/: .config.kiro  design.md  requirements.md  tasks.md
.kiro/specs/btg-connect-ai-mvp-lite/: design.md  requirements.md  tasks.md
.kiro/steering/: cloudformation-guide.md  coding-standards.md  environment-setup.md  lambda-development.md  project-overview.md  python-best-practices.md  testing-guide.md
cloudformation/stacks/sandbox/: .gitkeep  connectai-app.yaml
cloudformation/state-machines/: .gitkeep  transfer-breb.asl.json
cloudformation/templates/connectai/: .gitkeep  iam.yaml  lambda-ai-agent.yaml  lambdas-actions.yaml  lambdas-ingestion.yaml  lambdas-notify.yaml  state-machine.yaml
diagrams/: btg-connectai-architecture.drawio
docs/: flujo-transferencia-breb.md
layer/: README.md  build.ps1  build.sh
src/: requirements-dev.txt  requirements.txt
src/lambdas/: .gitkeep
src/lambdas/ai_agent/: agent.py  (+4 more)
src/login-page/: app.js  index.html  styles.css
src/shared/: .gitkeep  __init__.py  constants.py  errors.py  formatting.py  logger.py  masking.py  twilio_env.py  types.py
(+58 files in other folders)
